fixed button borders being too small

--- a/styles.css
+++ b/styles.css
@@ -5,13 +5,13 @@
   padding: 0;
   box-sizing: border-box;
 }
+
 body {
   font: 14px/1.5 Inter, sans-serif;
   height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-
   background-color: hsl(0, 0%, 8%);
 }
 
@@ -67,9 +67,14 @@ body {
 }
 
 .links a {
+  display: block;
   text-decoration: none;
   color: hsl(0, 0%, 100%);
   font-weight: 600;
+  height: 100%;
+  width: 100%;
+  padding: 0 1rem;
+  line-height: 3rem; /* Aligns the text vertically */
 }
 
 .links button:hover {
@@ -77,11 +82,11 @@ body {
 }
 
 .links button:hover a {
-  color: hsl(0, 0%, 20%)
+  color: hsl(0, 0%, 20%);
 }
 
 @media (max-width: 375px) {
-    .card{
-        width: 85%;
-    }
+  .card {
+    width: 85%;
+  }
 }
